versions/3.3.2/docs/MediaRootPermissionPartialUpdate.md
# MediaRootPermissionPartialUpdate

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**user** | [**ElementsUserMini**](ElementsUserMini.md) |  | [optional] 
**group** | [**ElementsGroup**](ElementsGroup.md) |  | [optional] 
**path** | **str** |  | [optional] 
**allow_create** | **bool** |  | [optional] 
**allow_write_fs** | **bool** |  | [optional] 
**allow_write_db** | **bool** |  | [optional] 
**allow_proxy_download** | **bool** |  | [optional] 
**allow_original_download** | **bool** |  | [optional] 
**allow_upload** | **bool** |  | [optional] 
**allow_sharing** | **bool** |  | [optional] 
**allow_delete_fs** | **bool** |  | [optional] 
**allow_delete_db** | **bool** |  | [optional] 
**show_tags** | **bool** |  | [optional] 
**show_comments** | **bool** |  | [optional] 
**show_locations** | **bool** |  | [optional] 
**show_custom_fields** | **bool** |  | [optional] 
**show_ratings** | **bool** |  | [optional] 
**show_subclips** | **bool** |  | [optional] 
**show_ai_metadata** | **bool** |  | [optional] 
**show_markers** | **bool** |  | [optional] 
**root** | **int** |  | [optional] 
**is_temporary_for_token** | **int** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


